--- a/src/Hero.css
+++ b/src/Hero.css
@@ -7,7 +7,7 @@
 .hero-placeholder-image {
     width: 100%;
     height: 100%;
-    background-image: url('/engagement_1.jpg');
+    background-image: url('/cover.png');
     background-size: cover;
-    background-position: center;
+    background-position: center bottom;
 }
